--- a/main.html
+++ b/main.html
@@ -10,6 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h1>My Playlist</h1>
+  <div class="player_one">
+	<a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song 1</a>
+	<a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">song 2</a>
+	<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">song 3</a>
+	<a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">song 4</a>
+	<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song 5</a>
+  </div>
+
+  <h2>Now Playing...</h2>
+  <div class="player_two">
+	<div class="vedio"><video src="https://www.w3schools.com/tags/movie.mp4" controls></video><div>
+	<h2>MP3 songs</h2>
+
+	<div class="audio"><audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio></div>
+  </div>
+
+  
 
 </body>
 
