--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 
   <h2>Now Playing...</h2>
   <div class="player_two">
-	<div class="vedio"><video  controls> <source src="https://www.w3schools.com/tags/movie.mp4" type="vedio/mp4"></video><div>
+	<div class="vedio"><video  controls> <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></video><div>
 	<h2>MP3 songs</h2>
 
 	<div class="audio"><audio  controls><source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3"></audio></div>
